; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/stdio/extr_getdelim.c_sappend.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/stdio/extr_getdelim.c_sappend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, i64*, i64*, i8*, i64)* @sappend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sappend(i8** noalias %0, i64* noalias %1, i64* noalias %2, i8* noalias %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8**, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  store i8** %0, i8*** %7, align 8
  store i64* %1, i64** %8, align 8
  store i64* %2, i64** %9, align 8
  store i8* %3, i8** %10, align 8
  store i64 %4, i64* %11, align 8
  %12 = load i8**, i8*** %7, align 8
  %13 = load i64, i64* %11, align 8
  %14 = load i64*, i64** %8, align 8
  %15 = load i64, i64* %14, align 8
  %16 = add i64 %13, %15
  %17 = add i64 %16, 1
  %18 = load i64*, i64** %9, align 8
  %19 = call i64 @expandtofit(i8** %12, i64 %17, i64* %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %5
  store i32 -1, i32* %6, align 4
  br label %35

22:                                               ; preds = %5
  %23 = load i8**, i8*** %7, align 8
  %24 = load i8*, i8** %23, align 8
  %25 = load i64*, i64** %8, align 8
  %26 = load i64, i64* %25, align 8
  %27 = getelementptr inbounds i8, i8* %24, i64 %26
  %28 = load i8*, i8** %10, align 8
  %29 = load i64, i64* %11, align 8
  %30 = call i32 @memcpy(i8* %27, i8* %28, i64 %29)
  %31 = load i64, i64* %11, align 8
  %32 = load i64*, i64** %8, align 8
  %33 = load i64, i64* %32, align 8
  %34 = add i64 %33, %31
  store i64 %34, i64* %32, align 8
  store i32 0, i32* %6, align 4
  br label %35

35:                                               ; preds = %22, %21
  %36 = load i32, i32* %6, align 4
  ret i32 %36
}

declare dso_local i64 @expandtofit(i8**, i64, i64*) #1

declare dso_local i32 @memcpy(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
